--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peerbot",
   "description": "Message seeding utility for friends p2p chat.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "MOOSE Team",
   "bin": {
     "peerbot": "./bin/cli.js"
@@ -10,12 +10,13 @@
     "url": "https://github.com/moose-team/peerbot/issues"
   },
   "dependencies": {
+    "electron-spawn": "5.0.0",
     "end-of-stream": "^1.1.0",
     "friends-swarm": "^1.0.0",
     "ghsign": "^1.2.2",
     "hyperlog": "^3.3.1",
-    "leveldown": "maxogden/leveldown#newnan",
-    "levelup": "^0.19.0",
+    "leveldown": "^1.4.1",
+    "levelup": "^1.2.1",
     "minimist": "^1.1.1",
     "node-gyp": "^1.0.3",
     "protocol-buffers": "^3.0.0",
@@ -29,6 +30,7 @@
     "webrtc-swarm": "^1.2.0"
   },
   "devDependencies": {
+    "electron-prebuilt": "0.36.10",
     "standard": "*"
   },
   "homepage": "https://github.com/moose-team/peerbot",
@@ -55,8 +57,7 @@
     "url": "https://github.com/moose-team/peerbot.git"
   },
   "scripts": {
-    "postinstall": "npm run rebuild-leveldb",
-    "rebuild-leveldb": "cd node_modules/leveldown && set HOME=~/.electron-gyp && node-gyp rebuild --target=0.25.1 --arch=x64 --dist-url=https://atom.io/download/atom-shell",
+    "postinstall": "postinstall.js",
     "start": "electron-spawn .",
     "test": "standard"
   }
