--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.2",
   "author": "MOOSE Team",
   "bin": {
-    "peerbot": "./bin/cli.js"
+    "peerbot": "./bin/cli.js",
+    "peerbot-postinstall": "./postinstall.js"
   },
   "bugs": {
     "url": "https://github.com/moose-team/peerbot/issues"
@@ -57,7 +58,7 @@
     "url": "https://github.com/moose-team/peerbot.git"
   },
   "scripts": {
-    "postinstall": "postinstall.js",
+    "postinstall": "peerbot-postinstall",
     "start": "electron-spawn .",
     "test": "standard"
   }
